--- a/andrew/src/week1/index.html
+++ b/andrew/src/week1/index.html
@@ -12,7 +12,7 @@
         <div>
             <ul>
                 <li class="link"><a href="https://www.acmicpc.net/problem/10870">Q. 1 피보나치 수열</a></li>
-                <li class="link"><a href="https://www.acmicpc.net/problem/2557">Q. 2 Hello world 출력</a></li>
+                <li class="link"><a href="https://www.acmicpc.net/problem/2908">Q. 2 상</a></li>
                 <li class="link"><a href="https://www.acmicpc.net/problem/1463">Q. 3 1로 만들기</a></li>
                 <li class="link"><a href="https://www.acmicpc.net/problem/10872">Q. 4 팩토리얼</a></li>
             </ul>
@@ -40,9 +40,20 @@
 
         <div>
             <h2>2번 문제</h2>
-            <p>Hello World!를 출력하시오.</p>
+            <p>상근이의 동생 상수는 수학을 정말 못한다. 상수는 숫자를 읽는데 문제가 있다. 이렇게 수학을 못하는 상수를 위해서 상근이는 수의 크기를 비교하는 문제를 내주었다. 상근이는 세 자리 수 두 개를 칠판에 써주었다.<br>
+                그 다음에 크기가 큰 수를 말해보라고 했다.<br>
+
+                상수는 수를 다른 사람과 다르게 거꾸로 읽는다. 예를 들어, 734과 893을 칠판에 적었다면, 상수는 이 수를 437과 398로 읽는다. 따라서, 상수는 두 수중 큰 수인 437을 큰 수라고 말할 것이다.<br>
+
+                두 수가 주어졌을 때, 상수의 대답을 출력하는 프로그램을 작성하시오.<br>
+                첫째 줄에 상근이가 칠판에 적은 두 수 A와 B가 주어진다. 두 수는 같지 않은 세 자리 수이며, 0이 포함되어 있지 않다.<br>
+                첫째 줄에 상수의 대답을 출력한다.
+            </p>
             <div>
-                <div id="helloWorld"></div>
+                <input id="sangguenNum1" class="inputTag" value="" type="number" placeholder="첫번째 값을 입력하시오." name="nValue"/>
+                <input id="sangguenNum2" class="inputTag" value="" type="number" placeholder="두번째 값을 입력하시오." name="nValue"/>
+                <button class ="button" type="submit" onclick="sangguenAnswer()">정답</button>
+                <div id="sangsuResult">정답:  </div>
             </div>
         </div>
 
@@ -104,16 +115,16 @@
 </style>
 
 <script>
-    // 1번 문제
+    // 1번 문제  Todo test 입력값 -1, 21, 0, 17, 0.5
     function fibonacciFunc(){
-        var val = document.getElementById('inputVal').value;//console.log((val));
+        var val = document.getElementById('inputVal').value;console.log((val));
         var fibonacciArr = [0,1];
         var result = null;
-        if (val < 2) {
+        if (val < 2 && val > 0) {
             result = (val === 0) ? fibonacciArr[0] : fibonacciArr[1];
         } else if (val > 20 || val < 0 || val % 1 !== 0) {
             alert('조건! n은 20보다 작거나 같은 자연수 또는 0이다.');
-            window.location.reload();
+			document.getElementById('inputVal').value ='';
         } else {
             for (var i = 0; i < val-1; i++) {
                 fibonacciArr[i+2] = fibonacciArr[i] + fibonacciArr[i+1];
@@ -124,15 +135,53 @@
         resultDom.innerHTML = "정답: " + result;//console.log(resultDom.value);
     }
 
-    // 2번 문제
-    $(document).ready(function () {
-      $('#helloWorld').html("정답 : Hello World!");
-    });
+    // 2번 문제 Todo test 입력 값 (129,343)(219,211)(-1,22)(1000,31)(0,000)(301,210)(331.5,421.5)
+    function sangguenAnswer(){
+        var num1 = document.getElementById('sangguenNum1').value;
+        var num2 = document.getElementById('sangguenNum2').value;
+
+        // 입력한 값의 자릿 수를 저장하는 변수들
+		var Num1first = Math.floor(num1/100);
+		var Num1twice = Math.floor((num1 - Num1first*100)/10);
+		var Num1third = Math.floor(num1%10);
+
+		var Num2first = Math.floor(num2/100);
+		var Num2twice = Math.floor((num2 - Num2first*100)/10);
+		var Num2third = Math.floor(num2%10);
+
+		// 입력한 숫자에 0이 있는지 검수
+		var isZero = Num1first*Num1twice*Num1third*Num2first*Num2twice+Num2third;
+
+        if (num1 < 100 || num1 > 999 || num1%1 !== 0 || num2 < 100 || num2 > 999 || num2%1 !== 0 || num1 === num2 || isZero === 0){
+        	alert('서로 다른 세자리 정수를 입력하시오! 모든 자리수에 0은 없습니다.');
+        	num1 = '';
+        	num2 = '';
+        }
+        var sangsuGetNum1 = changeSequence(num1);
+        var sangsuGetNum2 = changeSequence(num2);
+        var result = sangsuGetNum1 > sangsuGetNum2 ? sangsuGetNum1 : sangsuGetNum2;
+
+		document.getElementById('sangsuResult').innerHTML = '정답 :' + result;
+	}
+
+	function changeSequence(num) {
+		var first = Math.floor(num/100);//첫번째 자리수
+		var twice = Math.floor((num - first*100)/10);
+		var third = Math.floor(num%10);
+
+		return third*100 + twice*10 + first;
+	}
 
     // 3번 문제
     function getCalculationNum(){
     	var xValue = document.getElementById('intX').value;console.log(xValue);
-        var count = 0;// 계산 횟수
+        var count1 = 0;// 계산 횟수
+		var count2 = 0;
+		var count3 = 0;
+		var count4 = 0;
+		var count5 = 0;
+		var count6 = 0;
+
         if(xValue < 1 || xValue >= 1000000 || xValue % 1 !== 0) {
         	alert('조건 : 첫째 줄에 1보다 크거나 같고, 10^6보다 작거나 같은 정수 N이 주어진다!');
         	document.getElementById('intX').value='';
@@ -140,16 +189,77 @@
         	while (xValue > 1) {
                 if (xValue % 3 === 0) {
                     xValue = xValue / 3;
-                    count++;
+                    count1++;
                 } else if (xValue % 2 === 0) {
                     xValue = xValue / 2;
-                    count++;
+                    count1++;
                 } else {
                     xValue = xValue - 1;
-                    count++;
+                    count1++;
                 }
+
+				if (xValue % 3 === 0) {
+					xValue = xValue / 3;
+					count2++;
+				} else if (xValue % 2 === 0) {
+					xValue = xValue / 2;
+					count2++;
+				} else {
+					xValue = xValue - 1;
+					count2++;
+				}
+
+				if (xValue % 3 === 0) {
+					xValue = xValue / 3;
+					count3++;
+				} else if (xValue % 2 === 0) {
+					xValue = xValue / 2;
+					count3++;
+				} else {
+					xValue = xValue - 1;
+					count3++;
+				}
+
+				if (xValue % 3 === 0) {
+					xValue = xValue / 3;
+					count4++;
+				} else if (xValue % 2 === 0) {
+					xValue = xValue / 2;
+					count4++;
+				} else {
+					xValue = xValue - 1;
+					count4++;
+				}
+
+				if (xValue % 3 === 0) {
+					xValue = xValue / 3;
+					count5++;
+				} else if (xValue % 2 === 0) {
+					xValue = xValue / 2;
+					count5++;
+				} else {
+					xValue = xValue - 1;
+					count5++;
+				}
+
+				if (xValue % 3 === 0) {
+					xValue = xValue / 3;
+					count6++;
+				} else if (xValue % 2 === 0) {
+					xValue = xValue / 2;
+					count6++;
+				} else {
+					xValue = xValue - 1;
+					count6++;
+				}
             }
-            document.getElementById('calculationNum').innerHTML = '정답 :' + count;
+			console.log(count1);
+			console.log(count2);
+			console.log(count3);
+			console.log(count4);
+			console.log(count5);
+			console.log(count6);
+            document.getElementById('calculationNum').innerHTML = '정답 :';
         }
     }
 
